--- a/projects.css
+++ b/projects.css
@@ -46,6 +46,6 @@ p {
 .githubbutton:hover {
   animation-name: button;
   animation-duration: .3s;
-  background-color: white;
+  background-color: red;
   
 }
