--- a/projects.css
+++ b/projects.css
@@ -2,20 +2,20 @@
   display: flex;
   width: 70%;
   margin: auto;
-  
-  background-color: red;
+  background-color: #E2DDE3;
 }
 
 .left {
-  width: 65%;
+  width: 60%;
   float: left;
+  height: 200px;
 }
 
 .right {
   position: relative;
-  width: 35%;
+  width: 40%;
   line-height: 150px;
-  height: 150px;
+  height: 200px;
   float: right;
   
 }
@@ -33,19 +33,118 @@ p {
 }
 
 @keyframes button {
-  from {background-color: blue;}
-  to {background-color: darkblue;}
+  from {background-color: #6B5E62; bottom: 0px; left: 0px; box-shadow: -1px 2px 7px black;}
+  to {background-color:#A0949C; bottom: 5px; left: 5px; box-shadow: -4px 5px 13px black;}
 }
 
 .githubbutton {
+  position: relative;
+  color: #EFEFF0;
+  outline: 2px solid #A0949C;
   text-decoration: none;
+  box-shadow: -1px 2px 7px black;
+  padding: 10px 40px;
+  border-radius: 15px;
   font-size: 2em;
-  background-color: blue;
+  background-color: #6B5E62
 }
 
 .githubbutton:hover {
   animation-name: button;
-  animation-duration: .3s;
-  background-color: red;
+  animation-duration: .15s;
+  background-color: #A0949C;
+  box-shadow: -4px 5px 13px black;
+  bottom: 5px;
+  left: 5px;
+}
+
+.githubbutton img {
+  position: relative;
+  height: 30px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 2px black;
+  right: 15px;
+  top: 5px;
+}
+
+#lists {
+  width: 100%;
+}
+
+.project-node {
+  height: 200px;
   
+}
+
+#switch-container {
+  height: 120px;
+}
+
+.switch {
+  outline: 3px solid #D5CAD6;
+  background-color: #A0949C;
+  box-shadow: -2px 3px 5px black;
+  border-radius: 30px;
+  top: 30px;
+  font-weight: bold;
+  overflow: hidden;
+  margin: auto;
+  width: 240px;
+  text-align: center;
+  font-size: 18px;
+  letter-spacing: 1px;
+  color: #EFEFF0;
+  position: relative;
+  padding-right: 120px;
+}
+
+.switch:before {
+  content: "School";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 120px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 3;
+  pointer-events: none;
+}
+.switch-check {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 2;
+}
+.switch-check:checked + .switch-label:before {
+  transform: translateX(120px);
+  transition: transform 300ms ease;
+}
+.switch-check + .switch-label {
+  position: relative;
+  padding: 15px 0;
+  display: block;
+  user-select: none;
+  pointer-events: none;
+}
+.switch-check + .switch-label:before {
+  content: "";
+  background: #6B5E62;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: 30px;
+  transform: translateX(0);
+  transition: transform 300ms ease;
+}
+.switch-check + .switch-label .switch-span {
+  position: relative;
 }
