--- a/styles.css
+++ b/styles.css
@@ -314,3 +314,31 @@ footer p {
   overflow-y: scroll;
   max-height: 120px;
 }
+
+@media screen and (min-width: 320px) and (max-width: 1024px) {
+  #about-container {
+    height: 100vh;
+    width: 100%;
+  }
+
+  #linkedin {
+    display: none;
+  }
+
+  #about-info {
+    width: 100%;
+    font-size: 1.5em;
+  }
+
+  #about-text {
+    font-size: 1.2em;
+    line-height: 40px;
+  }
+
+  #resume {
+    font-size: 3em;
+    border-radius: 25px;
+    padding: 20px;
+  }
+}
+
